<resources>
    <string name="app_name">Mobile App Soft Test</string>
    <string name="archive_button_description">Archive button</string>
    <string name="title">Think. Perform. Relax.</string>
    <string name="up_note_in_list">Up note in list</string>
    <string name="button_for_pin_note">Button for pin note</string>
    <string name="button_for_share_note">Button for share note</string>
    <string name="add_new_note">Add new note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_to_mainactivity">Back to MainActivity</string>
    <string name="create_new_note">Create new note</string>
</resources>