<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23.2dp"
                android:layout_marginTop="27.6dp"
                android:background="@drawable/back"
                android:contentDescription="@string/back_to_mainactivity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="29dp"
                android:background="@drawable/pin"
                android:contentDescription="@string/button_for_pin_note"
                app:layout_constraintEnd_toStartOf="@id/share"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/share"
                android:layout_width="18dp"
                android:layout_height="20dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="19dp"
                android:background="@drawable/share"
                android:contentDescription="@string/button_for_share_note"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/edittext"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:fontFamily="@font/nunito_regular"
            android:importantForAutofill="no"
            android:inputType="textVisiblePassword|textMultiLine"
            android:padding="23dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:gravity="top"
            app:layout_constraintBottom_toTopOf="@id/add"
            app:layout_constraintTop_toBottomOf="@id/topbar"
            tools:ignore="LabelFor" />

        <ImageButton
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/do_more"
            android:contentDescription="@string/add_new_note"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>