<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="22dp">

        <ImageButton
            android:id="@+id/up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/up"
            android:contentDescription="@string/up_note_in_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="90dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/nunito_regular"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/share"
            app:layout_constraintStart_toEndOf="@id/up"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="32.75dp"
            android:background="@drawable/share"
            android:contentDescription="@string/button_for_share_note"
            app:layout_constraintEnd_toStartOf="@id/pin"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/pin"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/pin"
            android:contentDescription="@string/button_for_pin_note"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>